JumpScript/tests/baselines/reference/commentOnImportStatement1.errors.txt
tests/cases/compiler/commentOnImportStatement1.jump(3,22): error TS2307: Cannot find module './foo'.


==== tests/cases/compiler/commentOnImportStatement1.jump (1 errors) ====
    /* Copyright */
    
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo'.
    